--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ w\:* {behavior:url(#default#VML);}
 <link rel=themeData href="FW%20Replenishment%2011122024_files/themedata.thmx">
 <link rel=colorSchemeMapping
 href="FW%20Replenishment%2011122024_files/colorschememapping.xml">
-<!--[if gte mso 9]><xml>
+[if gte mso 9]><xml>
  <w:WordDocument>
   <w:Zoom>0</w:Zoom>
   <w:DocumentKind>DocumentEmail</w:DocumentKind>
@@ -56,7 +56,7 @@ href="FW%20Replenishment%2011122024_files/colorschememapping.xml">
    <m:intLim m:val="subSup"/>
    <m:naryLim m:val="undOvr"/>
   </m:mathPr></w:WordDocument>
-</xml><![endif]--><!--[if gte mso 9]><xml>
+</xml><![endif][if gte mso 9]><xml>
  <w:LatentStyles DefLockedState="false" DefUnhideWhenUsed="false"
   DefSemiHidden="false" DefQFormat="false" DefPriority="99"
   LatentStyleCount="376">
@@ -635,7 +635,7 @@ href="FW%20Replenishment%2011122024_files/colorschememapping.xml">
   <w:LsdException Locked="false" SemiHidden="true" UnhideWhenUsed="true"
    Name="Smart Link"/>
  </w:LatentStyles>
-</xml><![endif]-->
+</xml><![endif]
 <style>
 <!--
  /* Font Definitions */
