--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta name=Originator content="Microsoft Word 15">
 <link rel=File-List href="FW%20Replenishment%2011122024_files/filelist.xml">
 <link rel=Edit-Time-Data href="FW%20Replenishment%2011122024_files/editdata.mso">
-<!--[if !mso]>
+[if !mso]>
 <style>
 v\:* {behavior:url(#default#VML);}
 o\:* {behavior:url(#default#VML);}
 w\:* {behavior:url(#default#VML);}
 .shape {behavior:url(#default#VML);}
 </style>
-<![endif]-->
+<![endif]
 <link rel=themeData href="FW%20Replenishment%2011122024_files/themedata.thmx">
 <link rel=colorSchemeMapping
 href="FW%20Replenishment%2011122024_files/colorschememapping.xml">
@@ -723,7 +723,7 @@ div.WordSection1
 	{page:WordSection1;}
 -->
 </style>
-<!--[if gte mso 10]>
+[if gte mso 10]>
 <style>
  /* Style Definitions */
  table.MsoNormalTable
@@ -739,12 +739,12 @@ div.WordSection1
 	font-size:10.0pt;
 	font-family:"Times New Roman",serif;}
 </style>
-<![endif]--><!--[if gte mso 9]><xml>
+<![endif][if gte mso 9]><xml>
  <o:shapedefaults v:ext="edit" spidmax="1032"/>
-</xml><![endif]--><!--[if gte mso 9]><xml>
+</xml><![endif][if gte mso 9]><xml>
  <o:shapelayout v:ext="edit">
   <o:idmap v:ext="edit" data="1"/>
- </o:shapelayout></xml><![endif]-->
+ </o:shapelayout></xml><![endif]
 </head>
 
 <body lang=EN-US link="#467886" vlink="#96607D" style='tab-interval:.5in;
@@ -800,7 +800,7 @@ none'> Mateer, Nicholas <br>
 
 <p class=MsoNormal><o:p>&nbsp;</o:p></p>
 
-<p class=MsoNormal><!--[if gte vml 1]><v:shapetype id="_x0000_t75" coordsize="21600,21600"
+<p class=MsoNormal>[if gte vml 1]><v:shapetype id="_x0000_t75" coordsize="21600,21600"
  o:spt="75" o:preferrelative="t" path="m@4@5l@4@11@9@11@9@5xe" filled="f"
  stroked="f">
  <v:stroke joinstyle="miter"/>
