Update and rename FW Replenishment_Icecaps.htm to index.htm

--- a/index.htm
+++ b/index.htm
@@ -755,27 +755,27 @@ word-wrap:break-word'>
 <p class=MsoNormal style='margin-left:120.0pt;text-indent:-120.0pt;tab-stops:
 120.0pt;mso-layout-grid-align:none;text-autospace:none'><b><span
 style='font-family:"Calibri",sans-serif;color:black'>From:<span
-style='mso-tab-count:1'>                                         </span></span></b><span
+style='mso-tab-count:1'>Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â  </span></span></b><span
 style='font-family:"Calibri",sans-serif;color:black'>Mateer, Nicholas
 &lt;nicholas.mateer@thermofisher.com&gt;<o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:120.0pt;text-indent:-120.0pt;tab-stops:
 120.0pt;mso-layout-grid-align:none;text-autospace:none'><b><span
 style='font-family:"Calibri",sans-serif;color:black'>Sent:<span
-style='mso-tab-count:1'>                                           </span></span></b><span
+style='mso-tab-count:1'>Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â  </span></span></b><span
 style='font-family:"Calibri",sans-serif;color:black'>Wednesday, December 11,
 2024 2:42 PM<o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:120.0pt;text-indent:-120.0pt;tab-stops:
 120.0pt;mso-layout-grid-align:none;text-autospace:none'><b><span
 style='font-family:"Calibri",sans-serif;color:black'>To:<span style='mso-tab-count:
-1'>                                               </span></span></b><span
+1'>Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â  </span></span></b><span
 style='font-family:"Calibri",sans-serif;color:black'>nickmateer@outlook.com<o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-left:120.0pt;text-indent:-120.0pt;tab-stops:
 120.0pt;mso-layout-grid-align:none;text-autospace:none'><b><span
 style='font-family:"Calibri",sans-serif;color:black'>Subject:<span
-style='mso-tab-count:1'>                                     </span></span></b><span
+style='mso-tab-count:1'>Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â  </span></span></b><span
 style='font-family:"Calibri",sans-serif;color:black'>FW: Replenishment
 12/6/2024<o:p></o:p></span></p>
 
